--- a/src/scss/pageIndex/_xs.scss
+++ b/src/scss/pageIndex/_xs.scss
@@ -1,5 +1,562 @@
 @include respones(xs) {
-	//在此輸入內容
+		#icanvas{
+			position: fixed;
+			top: 40%;
+			right:-10px;
+			z-index: 1000;
+		}
+		.sideBarGroup{
+			position: fixed;
+			display: block;
+			width: 100px;
+			height: 250px;
+			top:40%;
+			right: 20px;
+			z-index: 1000;
+			.sideBar{
+				position: absolute;
+				width: 100px;
+				height: 22px;
+				line-height: 22px;
+				letter-spacing: 1px;
+				font-size: $fz-p;
+				left:0;
+				text-align: center;
+				color:$light-grey;
+				cursor: pointer;
+				span{
+					padding-right:15px;
+					display: none;
+				}
+				&.sideBar1{
+					top:-5px;
+				}
+				&.sideBar2{
+					top:50px;
+				}
+				&.sideBar3{
+					top:110px;
+				}
+				&.sideBar4{
+					top:170px;
+				}
+				&.sideBar5{
+					top:230px;
+				}
+			}
+		}
+		#i-wrapper {
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			transform: translate(0%,-5067px);
+			// overflow: hidden;
+			#i-bgc {
+				position: absolute;
+				background-image: url('../img/i-bgc2.png');
+				background-repeat: no-repeat;
+				background-size: cover;
+				background-position: center center;
+				margin: auto;
+				height: 5991px;
+				width: 100vw;
+				left: 0;
+				right: 0;
+			}
+			.section {
+				position: absolute;
+				left: 0;
+				right: 0;
+				height: 100%;
+				width: 100%;
+			}
+
+			.section01 {
+				bottom: -4841px;
+
+				#i-ground {
+					display: none;
+				}
+
+				#i-people {
+					display: none;
+				}
+
+				#i-telescop {
+					display: none;
+				}
+
+				h1 {
+					color: $white;
+					font-size: $fz-h3;
+					text-align: center;
+					margin-top: 120px;
+				}
+
+				.scroller {
+					width: 55px;
+					height: 55px;
+					border: 1px solid $green-blue;
+					border-radius: 50%;
+					text-align: center;
+					margin: auto;
+					position: relative;
+					top: 330px;
+					color:$green-blue;
+					font-size: 46px;
+					line-height: 55px;
+					text-align: center;
+				}
+
+				p {
+					color: $green-blue;
+					font-size: $fz-p;
+					font-weight: 700;
+					text-align: center;
+					position: relative;
+					top: 345px;
+				}
+			}
+			//section01
+			.section02 {
+				bottom: -4061px;
+
+				#cloud1 {
+					position: absolute;
+					bottom: -550px;
+					right: -300px;
+					transform: scale(0.7);
+				}
+
+				#cloud2 {
+					position: absolute;
+					bottom: -650px;
+					left: -900px;
+					transform: scale(0.8);
+				}
+
+				.activity {
+					position: relative;
+
+					.act {
+						position: absolute;
+						// outline: red solid 1px;
+						width: 840px;
+						top: -400px;
+						left: -230px;
+						right: 0;
+						perspective: 800px;
+						margin: auto;
+						// transform: scale(.4);
+						transition: 1s;
+						h3 {
+							font-size: $fz-h1;
+							color: $black;
+							padding: 10px 0;
+						}
+
+						p {
+							font-size: $fz-h3;
+							color: $black;
+						}
+
+						img {
+							width: 100%;
+						}
+
+						.pic {
+							position: relative;
+							width: 740px;
+							height: 415px;
+							overflow: hidden;
+							// outline:red solid 1px;
+							img {
+								width: 100%;
+								height: 100%;
+							}
+						}
+
+						.content {
+							position: absolute;
+							right: 30px;
+							bottom: -80px;
+							z-index: 3;
+							cursor: pointer;
+						}
+
+						.img-collection {
+							position: absolute;
+							display: block;
+							width: 896px;
+							height: 650px;
+							margin: auto;
+							z-index: 2;
+
+							&.img-collection1 {
+								transform: scale(1.4);
+								top: 20px;
+								left: 0;
+							}
+
+							&.img-collection2 {
+								transform: scale(1.3);
+								top: -48px;
+								left: -28px;
+							}
+						}
+					}
+				}
+			}
+			//scetion02
+			.section03 {
+				bottom: -2600px;
+				// border: 1px red solid;
+				height: 800px;
+
+				.forum:hover {
+					background-color: $green-blue;
+					cursor: pointer;
+				}
+
+				.forum {
+					position: absolute;
+					color: $white;
+					width: 320px;
+					height: 80px;
+					left:0px;
+					right: 0;
+					margin: auto;
+					background-color: $o-black;
+
+					.content {
+						padding: 20px 5px 5px 35px;
+
+						h4 {
+							font-size: $fz-h4;
+						}
+					}
+
+					.pic {
+						position: absolute;
+						left: -30px;
+						top: 0;
+						bottom: 0;
+						margin: auto;
+						width: 60px;
+						height: 60px;
+						display: none;
+						background-color: transparent;
+
+						img {
+							width: 100%;
+						}
+					}
+
+					.memberId {
+						float: left;
+						padding: 5px;
+						text-align: left;
+					}
+
+					.count {
+						float: right;
+						padding: 5px;
+						text-align: right;
+						font-size: 12px;
+
+						span {
+							padding-right: 15px;
+						}
+					}
+
+					&.forum1 {
+						top:80px;
+						transform: translate(0) scale(1);
+					}
+
+					&.forum2 {
+						top:170px;
+						transform: scale(1);
+					}
+
+					&.forum3 {
+						top:260px;
+						transform: scale(1);
+					}
+
+					&.forum4 {
+						top:350px;
+						transform: scale(1);
+					}
+
+					&.forum5 {
+						top:440px;
+						transform: scale(1);
+					}
+
+					&.forum6 {
+						top:530px;
+						transform: scale(1);
+					}
+
+					&.forum7 {
+						top:560px;
+						transform: scale(1);display: none;
+					}
+
+					&.forum8 {
+						top:640px;
+						transform: scale(1);display: none;
+					}
+
+					&.forum9 {
+						top:720px;
+						transform: scale(1);display: none;
+					}
+
+					&.forum10 {
+						top:820px;
+						transform: scale(1);display: none;
+					}
+
+					&.forum11 {
+						transform: scale(1);
+						display: none;
+					}
+
+					&.forum12 {
+						display: none;
+					}
+
+					&.forum13 {
+						display: none;
+					}
+
+					&.forum14 {
+						display: none;
+					}
+				}
+			}
+			.section04{
+				#photowall{
+					position: relative;
+					z-index: 100;
+				}
+			}
+			.section05 {
+				// display: none;
+				.accordion {
+					position: absolute;
+					left: 0px;
+					right: 0;
+					top: 150px;
+				}
+				.accordion .fakeCover:before{
+					content: '';
+					background-color: $o-black;
+					width: 100%;
+					height: 100%;
+					position: absolute;
+					top:0;
+					left: 0;
+					right: 0;
+					z-index: 2;
+					display: block;
+				}
+				.accordion li {
+					float: left;
+					width: 95%;
+					height: 220px;
+					display: block;
+					background-repeat: no-repeat;
+					background-position: center bottom;
+					position: relative;
+					overflow: hidden;
+					cursor: pointer;
+					box-shadow: 2px 3px 3px 1px $o-black;
+					transition: 0.8s;
+					z-index: 0;
+					margin: 10px;
+					&.know1 {
+						background-image: url("../img/i-know01.png");
+					}
+
+					&.know2 {
+						background-image: url("../img/i-know02.png");
+					}
+
+					&.know3 {
+						background-image: url("../img/i-know03.png");
+					}
+
+					&.know4 {
+						background-image: url("../img/i-know04.png");
+					}
+					&.know5 {
+						background-image: url("../img/i-know04.png");
+					}
+					.memberId{
+						position: absolute;
+						top: 25px;
+						left:70px;
+						color:$white;
+						display: none;
+					}
+					.pic{
+							position: absolute;
+							width: 40px;
+							height: 40px;
+							top:10px;
+							left:20px;
+							border-radius: 50%;
+							box-shadow: 0px 0px 10px 1px $white;
+							display: none;
+							img{
+								width: 100%;
+								height: 100%;
+							}
+					}
+					.heading {
+						background-color: #fff;
+						padding: 10px;
+						margin-top: 60px;
+						opacity: 0.9;
+						font-weight: bold;
+						letter-spacing: 1px;
+						font-size:$fz-p ;
+						color: $black;
+						text-align: center;
+						box-shadow: 3px 1px 1px  #888;
+						position: relative;
+						z-index: 3;
+					}
+					.description {
+						position: absolute;
+						width: 100%;
+						height: 175px;
+						bottom: 0px;
+						left: 0;
+						display: none;
+						h2 {
+							font-size: $fz-h2;
+							color: $black;
+							text-align: left;
+							margin: 0 0 10px 20px;
+							text-shadow: -1px -1px 1px $white;
+						}
+						p {
+							margin: 5px 20px;
+							font-size: $fz-p;
+							color:$black;
+							letter-spacing: 1px;
+							line-height: 1.5em;
+							text-align: justify;
+						}
+					}
+
+					.knowDescription {
+						// background:transparent url(../img/i-knowDescription.png) repeat-x top left;
+						background: linear-gradient(to bottom, rgba(255,255,255,0) 10%,rgba(255,255,255,1) 100%);
+						height: 400px;
+						position: absolute;
+						bottom: 0;
+						left: 0;
+						width: 100%;
+						display: none;
+					}
+				}
+				// .knowledge{
+				// 	width: 410px;
+				// 	height: 530px;
+				// 	position: absolute;
+				// 	background-color: $white;
+				// 	top:300px;
+				// 	margin: auto;
+				// 	box-shadow: 2px 2px 2px $grey;
+				// 	&.knowledge01{
+				// 		left:150px;
+				// 		transform: scale(0.9);
+				// 		z-index: 9;
+				// 		opacity: 0.8;
+				// 	}
+				// 	&.knowledge02{
+				// 		left:350px;
+				// 		z-index: 10;
+				// 	}
+				// 	&.knowledge03{
+				// 		left:550px;
+				// 		transform: scale(0.9);
+				// 		z-index: 9;
+				// 		opacity: 0.8;
+				// 	}
+				// 	&.knowledge04{
+				// 		left:700px;
+				// 		transform: scale(0.8);
+				// 		z-index: 8;
+				// 		opacity: 0.8;
+				// 	}
+				// 	&.knowledge05{
+				// 		left:800px;
+				// 		transform: scale(0.7);
+				// 		z-index: 7;
+				// 		opacity: 0.8;
+				// 	}
+				// 	&.knowledge06{
+				// 		left:900px;
+				// 		transform: scale(0.6);
+				// 		z-index: 6;
+				// 		opacity: 0.8;
+				// 	}
+				// 	&.knowledge07{
+				// 		left:980px;
+				// 		transform: scale(0.5);
+				// 		z-index: 5;
+				// 		opacity: 0.8;
+				// 	}
+				// 	h3{
+				// 		font-size: $fz-h3;
+				// 		color:$black;
+				// 		padding: 15px;
+				// 		border-bottom: 1px $light-grey solid;
+				// 	}
+				// 	h4{
+				// 		font-size: $fz-h4;
+				// 		color:$black;
+				// 	}
+				// 	.content{
+				// 		color:$black;
+				// 		font-size: $fz-p;
+				// 		line-height: 1.5em;
+				// 		text-align: justify;
+				// 		letter-spacing: 1px;
+				// 		padding: 20px;
+				// 	}
+				// 	.pic{
+				// 		display: inline-block;
+				// 		width: 55px;
+				// 		height: 55px;
+				// 		margin: 10px;
+				// 		text-align: center;
+				// 		img{
+				// 			width: 100%;
+				// 		}
+				// 	}
+				// 	.detail{
+				// 		padding: 10px;
+				// 	}
+				// 	.info{
+				// 		display: inline-block;
+				// 		width: 280px;
+				// 	}
+				// }
+
+		}
+
+
+	}
+
 
 
 
