--- a/src/scss/pageIndex/_xs.scss
+++ b/src/scss/pageIndex/_xs.scss
@@ -340,6 +340,7 @@
 				}
 			}
 			.section04{
+				bottom: -1500px;
 				#photowall{
 					position: relative;
 					z-index: 100;
@@ -347,6 +348,7 @@
 			}
 			.section05 {
 				// display: none;
+				top:0px;
 				.accordion {
 					position: absolute;
 					left: 0px;
