--- a/src/scss/pageActivity/pageMain/_maginic.scss
+++ b/src/scss/pageActivity/pageMain/_maginic.scss
@@ -9,7 +9,26 @@
   max-width: 80%;
   margin: 0 auto; 
 }
-
+/*相片內頁*/
+.white-p-inside {
+  position: relative;
+  background:#000;
+  padding: 25px;
+  
+  max-width:80%;
+  margin: 0 auto;
+  padding-top:50px;
+}
+/*上傳頁面*/
+.white-upload {
+  position: relative;
+  background:#000;
+  
+  /*width: 1000px;*/
+  max-width:100%;
+  margin:0 auto;
+  padding-top:50px;
+}
 
 
 
