--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,6 +33,7 @@ table {
   border-spacing: 0; }
 
 * {
+  font-family: "微軟正黑體";
   box-sizing: border-box; }
 
 a {
@@ -65,7 +66,22 @@ a {
     display: block;
     text-decoration: none;
     line-height: 35px;
-    font-size: 18px;
+    font-size: 16px;
+    letter-spacing: 2px; }
+
+.btn-sm {
+  width: 60px;
+  height: 28px;
+  text-align: center;
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 5px; }
+  .btn-sm a {
+    padding: 0px 10px;
+    display: block;
+    text-decoration: none;
+    line-height: 28px;
+    font-size: 14px;
     letter-spacing: 2px; }
 
 .btn-lg {
@@ -88,6 +104,14 @@ a {
   border: 1px solid #4f9cdd; }
   .btn-blue a {
     color: #f3f7f7; }
+
+.btn-blue:hover {
+  background-color: #f3f7f7;
+  border: 1px solid #4f9cdd;
+  text-shadow: 1px 1px 1px #020202;
+  box-shadow: 1px 5px 10px #020202; }
+  .btn-blue:hover a {
+    color: #4f9cdd; }
 
 .btn-blue1 {
   background-color: transparent;
@@ -580,33 +604,14 @@ div[class*=col-lg-pull] {
   width: 100%;
   height: auto; }
 
-.menu li a:after {
-  position: absolute;
-  top: -5px;
-  right: 0;
-  font-size: 16px;
-  color: #9e9e9e; }
-
-.menu li:nth-of-type(1) a:after {
-  content: '觀星活動'; }
-
-.menu li:nth-of-type(2) a:after {
-  content: '星際論壇'; }
-
-.menu li:nth-of-type(3) a:after {
-  content: '照片'; }
-
-.menu li:nth-of-type(4) a:after {
-  content: '星知識';
-  right: 5px; }
-
 #nav {
   height: 80px;
   width: 100%;
-  background-color: #020202;
+  background-color: rgba(0, 0, 0, 0.6);
   position: fixed;
   top: 0;
-  left: 0; }
+  left: 0;
+  z-index: 10000; }
 
 #navButtonHidden {
   position: absolute;
@@ -627,20 +632,11 @@ div[class*=col-lg-pull] {
     bottom: 0;
     font-size: 16px;
     color: #9e9e9e; }
-  .menu li:nth-of-type(1) a:after {
-    content: '觀星活動'; }
-  .menu li:nth-of-type(2) a:after {
-    content: '星際論壇'; }
-  .menu li:nth-of-type(3) a:after {
-    content: '照片'; }
-  .menu li:nth-of-type(4) a:after {
-    content: '星知識';
-    right: 5px; }
   .mainMenu li {
     display: inline-block;
     position: relative; }
   .mainMenu.menu {
-    background-color: #020202;
+    background-color: rgba(0, 0, 0, 0.6);
     margin: auto;
     text-align: center;
     position: absolute;
@@ -650,7 +646,7 @@ div[class*=col-lg-pull] {
     height: 700px;
     width: 700px;
     border-radius: 50%;
-    padding-top: 370px;
+    padding-top: 400px;
     padding-left: 200px;
     z-index: -2;
     transform: scale(0);
@@ -665,15 +661,20 @@ div[class*=col-lg-pull] {
       color: #f3f7f7; }
   .mainMenu.signArea {
     position: absolute;
-    top: 5px;
-    right: 5px;
-    padding-top: 25px; }
-    .mainMenu.signArea .btn {
-      width: 60px;
+    top: 40px;
+    right: 15px; }
+    .mainMenu.signArea span {
+      color: #f3f7f7;
       font-size: 12px;
-      background-color: transparent;
-      border: 0;
-      display: inline-block; }
+      padding: 5px;
+      display: none; }
+  .mainMenu #signLeft {
+    position: absolute;
+    top: -10px;
+    right: 0;
+    font-size: 30px;
+    color: #f3f7f7;
+    text-shadow: 1px 1px 10px #3e3e43; }
   #navButton {
     position: absolute;
     top: 25px;
@@ -708,9 +709,24 @@ div[class*=col-lg-pull] {
     transform: rotate(-45deg);
     box-shadow: none; }
   #navButtonHidden:checked ~ .menu {
-    top: 150px;
+    animation: menuTrans 1.5s both; } }
+
+@keyframes menuTrans {
+  0% {
+    transform: scale(0);
+    top: 150px; }
+  30% {
+    transform: scale(0.1);
+    top: -140px;
+    left: 50px; }
+  50% {
+    transform: scale(0.1);
+    top: 300px;
+    left: 200px; }
+  100% {
     transform: scale(1);
-    transition: 0.8s cubic-bezier(0.13, 0.27, 0.06, 0.82); } }
+    top: 0px;
+    left: -300px; } }
 
 @media screen and (max-width: 992px) and (min-width: 768px) {
   #logo {
@@ -728,16 +744,19 @@ div[class*=col-lg-pull] {
     .mainMenu.menu {
       display: none; }
     .mainMenu.signArea {
+      width: 14%;
+      text-align: right;
       position: absolute;
-      top: 5px;
-      right: 5px;
-      padding-top: 25px; }
-      .mainMenu.signArea .btn {
-        width: 60px;
-        font-size: 12px;
-        background-color: transparent;
-        border: 0px;
-        display: inline-block; } }
+      top: 0;
+      right: 0px; }
+      .mainMenu.signArea a {
+        display: block;
+        font-size: 18px;
+        color: #9e9e9e;
+        letter-spacing: 1px;
+        padding: 5px; }
+        .mainMenu.signArea a:hover {
+          color: #f3f7f7; } }
 
 @media screen and (min-width: 993px) {
   #logo {
@@ -757,16 +776,19 @@ div[class*=col-lg-pull] {
         display: block;
         color: #f3f7f7;
         font-size: 20px;
-        padding: 12px;
+        padding: 13px;
         letter-spacing: 1px; }
-        .mainMenu.menu a span {
-          font-size: 24px;
-          font-weight: 900; }
     .mainMenu.signArea {
       width: 14%;
       text-align: right; }
-  .menu a:hover:after {
-    color: white; }
+      .mainMenu.signArea a {
+        display: block;
+        font-size: 18px;
+        color: #9e9e9e;
+        letter-spacing: 1px;
+        padding: 14px 5px 12px 0px; }
+        .mainMenu.signArea a:hover {
+          color: #f3f7f7; }
   .menu a:hover {
     border-bottom: 4px solid #86d4f5; } }
 
