--- a/src/scss/layout/_md.scss
+++ b/src/scss/layout/_md.scss
@@ -22,24 +22,33 @@
                 display: block;
                 color: $white;
                 font-size: $fz-nav;
-                padding: 12px;
+                padding: 13px;
                 letter-spacing: 1px;
-
-                span {
-                    font-size: $fz-nav + 4;
-                    font-weight: 900;
-                }
             }
         }
 
         &.signArea {
             width: 14%;
             text-align: right;
+            a {
+                display: block;
+                font-size: $fz-nav - 2px;
+                color:$light-grey;
+                letter-spacing: 1px;
+                padding:14px 5px 12px 0px;
+                &:hover{
+                  color:$white;
+                }
+            }
         }
-    }
-
-    .menu a:hover:after {
-        color: white;
+        // #signLeft a:after{
+        //   content: '|';
+        //   display: block;
+        //   position: absolute;
+        //   top:12px;
+        //   right:-5px;
+        //   color:$light-grey;
+        // }
     }
 
     .menu a:hover {
