--- a/src/scss/layout/_xs.scss
+++ b/src/scss/layout/_xs.scss
@@ -15,24 +15,6 @@
         font-size: 16px;
         color: $light-grey;
     }
-
-    .menu li:nth-of-type(1) a:after {
-        content: '觀星活動';
-    }
-
-    .menu li:nth-of-type(2) a:after {
-        content: '星際論壇';
-    }
-
-    .menu li:nth-of-type(3) a:after {
-        content: '照片';
-    }
-
-    .menu li:nth-of-type(4) a:after {
-        content: '星知識';
-        right: 5px;
-    }
-
     .mainMenu {
         li {
             display: inline-block;
@@ -40,7 +22,7 @@
         }
 
         &.menu {
-            background-color: $black;
+            background-color: $o-black;
             margin: auto;
             text-align: center;
             position: absolute;
@@ -50,7 +32,7 @@
             height: 700px;
             width: 700px;
             border-radius: 50%;
-            padding-top: 370px;
+            padding-top: 400px;
             padding-left: 200px;
             z-index: -2;
             transform: scale(0);
@@ -70,18 +52,23 @@
 
         &.signArea {
             position: absolute;
-            top: 5px;
-            right: 5px;
-            padding-top: 25px;
-
-            .btn {
-                width: 60px;
-                font-size: 12px;
-                background-color: transparent;
-                border: 0;
-                display: inline-block;
+            top: 40px;
+            right: 15px;
+            span{
+              color:$white;
+              font-size: 12px;
+              padding: 5px;
+              display: none;
             }
         }
+          #signLeft{
+              position: absolute;
+              top:-10px;
+              right:0;
+              font-size: 30px;
+              color:$white;
+              text-shadow: 1px 1px 10px $grey;
+            }
     }
 
     #navButton {
@@ -130,8 +117,15 @@
         box-shadow: none;
     }
     #navButtonHidden:checked ~ .menu{
-      top:150px;
-      transform: scale(1);
-      transition: .8s cubic-bezier(.13,.27,.06,.82);
+      // top:150px;
+      // transform: scale(1);
+      // transition: .8s cubic-bezier(.13,.27,.06,.82);
+      animation: menuTrans 1.5s both;
     }
+}
+@keyframes menuTrans {
+  0%{transform: scale(0);top:150px}
+  30%{transform: scale(0.1);top:-140px;left:50px}
+  50%{transform: scale(0.1);top:300px;left:200px}
+  100%{transform: scale(1);top:0px;left:-300px}
 }
