--- a/src/css/main.css
+++ b/src/css/main.css
@@ -613,9 +613,66 @@ div[class*=col-lg-pull] {
   left: 0;
   z-index: 10000; }
 
+#navButton {
+  position: absolute;
+  top: 25px;
+  left: 15px;
+  width: 40px;
+  height: 40px;
+  background: #45484d;
+  color: #f2f2f2;
+  border-radius: 50%; }
+
+#navButton:after,
+#navButton:before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 16px;
+  height: 2px;
+  background-color: #fff;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  transition: 0.8s; }
+
+#navButton:before {
+  box-shadow: 0 -6px 0 #fff; }
+
+#navButton:after {
+  box-shadow: 0 6px 0 #fff; }
+
+#navButtonHidden:checked ~ #navButton:before {
+  transform: rotate(45deg);
+  box-shadow: none; }
+
+#navButtonHidden:checked ~ #navButton:after {
+  transform: rotate(-45deg);
+  box-shadow: none; }
+
+#navButtonHidden:checked ~ .menu {
+  transition: 1.2s cubic-bezier(0.13, 0.27, 0.06, 0.82);
+  animation: menuTrans 0.8s both; }
+
 #navButtonHidden {
   position: absolute;
   left: -1000px; }
+
+@keyframes menuTrans {
+  0% {
+    transform: scale(0);
+    opacity: 0; }
+  50% {
+    transform: scale(0.1);
+    top: 400px;
+    left: -100px; }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+    top: 150;
+    left: -300px; } }
 
 @media screen and (max-width: 767px) {
   #logo {
@@ -676,57 +733,7 @@ div[class*=col-lg-pull] {
     color: #f3f7f7;
     text-shadow: 1px 1px 10px #3e3e43; }
   #navButton {
-    position: absolute;
-    top: 25px;
-    left: 15px;
-    width: 40px;
-    height: 40px;
-    background: #45484d;
-    color: #f2f2f2;
-    border-radius: 50%; }
-  #navButton:after,
-  #navButton:before {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 16px;
-    height: 2px;
-    background-color: #fff;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    transition: 0.8s; }
-  #navButton:before {
-    box-shadow: 0 -6px 0 #fff; }
-  #navButton:after {
-    box-shadow: 0 6px 0 #fff; }
-  #navButtonHidden:checked ~ #navButton:before {
-    transform: rotate(45deg);
-    box-shadow: none; }
-  #navButtonHidden:checked ~ #navButton:after {
-    transform: rotate(-45deg);
-    box-shadow: none; }
-  #navButtonHidden:checked ~ .menu {
-    animation: menuTrans 1.5s both; } }
-
-@keyframes menuTrans {
-  0% {
-    transform: scale(0);
-    top: 150px; }
-  30% {
-    transform: scale(0.1);
-    top: -140px;
-    left: 50px; }
-  50% {
-    transform: scale(0.1);
-    top: 300px;
-    left: 200px; }
-  100% {
-    transform: scale(1);
-    top: 0px;
-    left: -300px; } }
+    display: block; } }
 
 @media screen and (max-width: 992px) and (min-width: 768px) {
   #logo {
@@ -735,28 +742,59 @@ div[class*=col-lg-pull] {
     width: 100%;
     margin: auto;
     padding-top: 15px; }
-  .mainMenu {
-    float: left;
-    padding-top: 30px; }
-    .mainMenu li {
-      display: inline-block;
-      position: relative; }
-    .mainMenu.menu {
+  .menu li a:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    font-size: 16px;
+    color: #9e9e9e; }
+  .mainMenu li {
+    display: inline-block;
+    position: relative; }
+  .mainMenu.menu {
+    background-color: rgba(0, 0, 0, 0.6);
+    margin: auto;
+    text-align: center;
+    position: absolute;
+    top: 0px;
+    left: -300px;
+    bottom: 0;
+    height: 700px;
+    width: 700px;
+    border-radius: 50%;
+    padding-top: 400px;
+    padding-left: 200px;
+    z-index: -2;
+    transform: scale(0);
+    transition: 0.8s cubic-bezier(0.13, 0.27, 0.06, 0.82); }
+    .mainMenu.menu li {
+      display: block;
+      text-align: center; }
+    .mainMenu.menu a {
+      display: block;
+      padding: 20px 10px;
+      font-size: 20px;
+      color: #f3f7f7; }
+  .mainMenu.signArea {
+    position: absolute;
+    top: 40px;
+    right: 15px; }
+    .mainMenu.signArea span {
+      color: #f3f7f7;
+      font-size: 12px;
+      padding: 5px;
       display: none; }
-    .mainMenu.signArea {
-      width: 14%;
-      text-align: right;
-      position: absolute;
-      top: 0;
-      right: 0px; }
-      .mainMenu.signArea a {
-        display: block;
-        font-size: 18px;
-        color: #9e9e9e;
-        letter-spacing: 1px;
-        padding: 5px; }
-        .mainMenu.signArea a:hover {
-          color: #f3f7f7; } }
+  .mainMenu #signLeft {
+    position: absolute;
+    top: -10px;
+    right: 0;
+    font-size: 30px;
+    color: #f3f7f7;
+    text-shadow: 1px 1px 10px #3e3e43; }
+  #navButton {
+    display: block; } }
 
 @media screen and (min-width: 993px) {
   #logo {
@@ -776,7 +814,7 @@ div[class*=col-lg-pull] {
         display: block;
         color: #f3f7f7;
         font-size: 20px;
-        padding: 13px;
+        padding: 14px 10px;
         letter-spacing: 1px; }
     .mainMenu.signArea {
       width: 14%;
@@ -786,11 +824,16 @@ div[class*=col-lg-pull] {
         font-size: 18px;
         color: #9e9e9e;
         letter-spacing: 1px;
-        padding: 14px 5px 12px 0px; }
+        padding: 16px 5px 12px 0px; }
         .mainMenu.signArea a:hover {
           color: #f3f7f7; }
+      .mainMenu.signArea .fa {
+        display: none; }
   .menu a:hover {
-    border-bottom: 4px solid #86d4f5; } }
+    border-bottom: 2px solid #86d4f5;
+    text-shadow: 1px 1px 5px 10px #3e3e43; }
+  #navButton {
+    display: none; } }
 
 footer {
   width: 100%;
@@ -1751,25 +1794,64 @@ footer {
           display: block; }
     #i-wrapper .section04 {
       bottom: -1500px;
-      background-image: url("../img/i-bg.jpg");
-      background-size: cover; }
+      background-size: cover;
+      perspective: 800px;
+      perspective-origin: center top; }
       #i-wrapper .section04 .gallery {
-        position: relative;
-        perspective: 2000px;
-        perspective-origin: 0px 0px;
-        width: 100%;
         height: 100%;
-        overflow: hidden;
-        transform-style: preserve-3d; }
-      #i-wrapper .section04 .gallery img {
+        width: 100%;
         position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
         transform-style: preserve-3d;
-        transform-origin: 50% 50%;
-        top: 50%;
-        left: 40%;
-        max-width: 200px;
-        max-height: 200px;
-        cursor: pointer; }
+        transition: 1s; }
+      #i-wrapper .section04 .pic {
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 250px;
+        opacity: 0.95; }
+        #i-wrapper .section04 .pic img {
+          width: 100%; }
+      #i-wrapper .section04 .pic1 {
+        transform: rotateY(0deg) translateZ(400px); }
+      #i-wrapper .section04 .pic2 {
+        transform: rotateY(45deg) translateZ(400px); }
+      #i-wrapper .section04 .pic3 {
+        transform: rotateY(90deg) translateZ(400px); }
+      #i-wrapper .section04 .pic4 {
+        transform: rotateY(135deg) translateZ(400px); }
+      #i-wrapper .section04 .pic5 {
+        transform: rotateY(180deg) translateZ(400px); }
+      #i-wrapper .section04 .pic6 {
+        transform: rotateY(225deg) translateZ(400px); }
+      #i-wrapper .section04 .pic7 {
+        transform: rotateY(270deg) translateZ(400px); }
+      #i-wrapper .section04 .pic8 {
+        transform: rotateY(315deg) translateZ(400px); }
+      #i-wrapper .section04 .next, #i-wrapper .section04 .prev {
+        color: #444;
+        position: absolute;
+        top: 100px;
+        padding: 1em 2em;
+        cursor: pointer;
+        background: #CCC;
+        border-radius: 5px;
+        border-top: 1px solid #FFF;
+        box-shadow: 0 5px 0 #999;
+        transition: box-shadow 0.1s, top 0.1s; }
+      #i-wrapper .section04 .next:hover, #i-wrapper .section04 .prev:hover {
+        color: #000; }
+      #i-wrapper .section04 .next:active, #i-wrapper .section04 .prev:active {
+        top: 104px;
+        box-shadow: 0 1px 0 #999; }
+      #i-wrapper .section04 .next {
+        right: 5em; }
+      #i-wrapper .section04 .prev {
+        left: 5em; }
     #i-wrapper .section05 {
       top: 120px; }
       #i-wrapper .section05 .accordion {
