--- a/src/scss/layout/_sm.scss
+++ b/src/scss/layout/_sm.scss
@@ -1,40 +1,78 @@
 @include respones(sm) {
-  #logo{
-    float: none;
-    text-align: center;
-    width: 100%;
-    margin: auto;
-    padding-top: 15px;
+  #logo {
+      float: none;
+      text-align: center;
+      width: 100%;
+      margin: auto;
+      padding-top: 15px;
+  }//after
+  .menu li a:after {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      font-size: 16px;
+      color: $light-grey;
   }
-  .mainMenu{
-    float: left;
-    padding-top: 30px;
-      li{
-        display: inline-block;
-        position: relative;
-      }
-      &.menu{
-        display: none;
-      }
-      &.signArea {
-          width: 14%;
-          text-align: right;
-          position: absolute;
-          top:0;
-          right:0px;
-          a {
-              display: block;
-              font-size: $fz-nav - 2px;
-              color:$light-grey;
-              letter-spacing: 1px;
-              padding:5px;
-              &:hover{
-                color:$white;
-              }
-          }
-      }
+  .mainMenu {
+      li {
+          display: inline-block;
+          position: relative;
       }
 
+      &.menu {
+          background-color: $o-black;
+          margin: auto;
+          text-align: center;
+          position: absolute;
+          top: 0px;
+          left: -300px;
+          bottom: 0;
+          height: 700px;
+          width: 700px;
+          border-radius: 50%;
+          padding-top: 400px;
+          padding-left: 200px;
+          z-index: -2;
+          transform: scale(0);
+          transition: .8s cubic-bezier(.13,.27,.06,.82);
+          li {
+              display: block;
+              text-align: center;
+          }
+
+          a {
+              display: block;
+              padding: 20px 10px;
+              font-size: 20px;
+              color: $white;
+          }
+      }
+
+      &.signArea {
+          position: absolute;
+          top: 40px;
+          right: 15px;
+          span{
+            color:$white;
+            font-size: 12px;
+            padding: 5px;
+            display: none;
+          }
+      }
+        #signLeft{
+            position: absolute;
+            top:-10px;
+            right:0;
+            font-size: 30px;
+            color:$white;
+            text-shadow: 1px 1px 10px $grey;
+          }
+  }
+  #navButton{
+    display: block;
+  }
 
 
 
