--- a/src/scss/pageIndex/_lg.scss
+++ b/src/scss/pageIndex/_lg.scss
@@ -346,27 +346,94 @@
 		}
 		.section04{
 			bottom: -1500px;
-			background-image: url('../img/i-bg.jpg');
+			// background-image: url('../img/i-bg.jpg');
 			background-size: cover;
-			.gallery {
-			  position:relative;
-			  perspective:2000px;
-			  perspective-origin: 0px 0px;
-			  width: 100%;
+			perspective: 800px;
+			perspective-origin: center top;
+			.gallery  {
 			  height: 100%;
-			  overflow:hidden;
+			  width: 100%;
+			  position: absolute;
+				left: 0;right: 0;margin: auto;
 			  transform-style: preserve-3d;
+			  transition:1s;
 			}
-			.gallery img{
-			  position:absolute;
-			  transform-style: preserve-3d;
-			  transform-origin: 50% 50%;
-			  top:50%;
-			  left:40%;
-			  max-width: 200px;
-			  max-height:200px;
-			  cursor:pointer;
+
+			.pic {
+			  display: block;
+			  position: absolute;
+				left: 0;right: 0;margin: auto;
+			  width: 250px;
+			  opacity: 0.95;
+				img{
+					width: 100%;
+				}
 			}
+
+			.pic1 {
+			  transform: rotateY(0deg) translateZ(400px);
+			}
+			.pic2{
+			  transform: rotateY(45deg) translateZ(400px);
+			}
+			.pic3{
+			  transform: rotateY(90deg) translateZ(400px);
+			}
+			.pic4{
+			  transform: rotateY(135deg) translateZ(400px);
+			}
+			.pic5{
+			  transform: rotateY(180deg) translateZ(400px);
+			}
+			.pic6 {
+			  transform: rotateY(225deg) translateZ(400px);
+			}
+			.pic7 {
+				transform: rotateY(270deg) translateZ(400px);
+			}
+			.pic8 {
+				transform: rotateY(315deg) translateZ(400px);
+			}
+
+
+			.next, .prev {
+			  color: #444;
+			  position: absolute;
+			  top: 100px;
+			  padding: 1em 2em;
+			  cursor: pointer;
+			  background: #CCC;
+			  border-radius: 5px;
+			  border-top: 1px solid #FFF;
+			  box-shadow: 0 5px 0 #999;
+			  transition: box-shadow 0.1s, top 0.1s;
+			}
+			.next:hover, .prev:hover { color: #000; }
+			.next:active, .prev:active {
+			  top: 104px;
+			  box-shadow: 0 1px 0 #999;
+			}
+			.next { right: 5em; }
+			.prev { left: 5em; }
+			// .gallery {
+			//   position:relative;
+			//   perspective:2000px;
+			//   perspective-origin: 0px 0px;
+			//   width: 100%;
+			//   height: 100%;
+			//   overflow:hidden;
+			//   transform-style: preserve-3d;
+			// }
+			// .gallery img{
+			//   position:absolute;
+			//   transform-style: preserve-3d;
+			//   transform-origin: 50% 50%;
+			//   top:50%;
+			//   left:40%;
+			//   max-width: 200px;
+			//   max-height:200px;
+			//   cursor:pointer;
+			// }
 
 		}
 		.section05 {
