--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2477,32 +2477,31 @@ footer {
   box-shadow: 1px 5px 10px #000; }
 
 .f_section {
-  height: 100vh;
   width: 100%; }
 
 #f_section1 {
   color: #f3f7f7;
-  background-image: url(../img/forum/f_001.jpg);
+  height: 100vh;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
   position: relative;
   text-align: center; }
-  #f_section1:before {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    width: 0px;
-    background-color: #fff;
-    vertical-align: middle; }
   #f_section1 .f_title {
     width: 30%;
+    height: 10%;
     text-align: center;
     display: inline-block;
-    vertical-align: middle; }
+    vertical-align: middle;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto; }
     #f_section1 .f_title h1 {
       font-size: 40px;
-      text-shadow: 1px 1px 5px #000; }
+      text-shadow: 1px 10px 10px #000; }
   #f_section1 .f_desc {
     width: 70%;
     height: 30%;
@@ -2513,7 +2512,7 @@ footer {
     right: 0;
     margin: auto; }
     #f_section1 .f_desc h3 {
-      font-size: 28px;
+      font-size: 24px;
       color: rgba(255, 255, 255, 0.7);
       margin-bottom: 10px;
       text-shadow: 1px 1px 2px #333; }
@@ -2522,14 +2521,11 @@ footer {
       color: #333;
       margin-top: 30px;
       font-weight: 300;
-      animation: m_float .8s linear 0s infinite alternate;
-      opacity: 0.6; }
+      animation: m_float .8s linear 0s infinite alternate; }
 
-#f_section2 {
-  height: 100vh; }
-  #f_section2 #f_tab {
-    width: 45%;
-    float: left; }
+#f_section2 #f_tab {
+  width: 45%;
+  float: left; }
 
 .f_fn_area {
   width: 50%;
@@ -2564,10 +2560,8 @@ footer {
 
 .f_posts {
   width: 90%;
-  height: 100%;
   box-shadow: -1px -1px 2px #333 inset;
   box-shadow: 1px -1px 5px #333 inset;
-  animation: m_float 3s linear 0s infinite alternate;
   margin: auto; }
   .f_posts table {
     width: 100%;
